--- a/app/views/districts/index.html.erb
+++ b/app/views/districts/index.html.erb
@@ -10,6 +10,7 @@
   <tbody>
     <% @districts.each do |district| %>
       <tr>
+        <td><%= district.jurisdiction_name%></td>
         <td><%= link_to 'Show', district %></td>
         <td><%= link_to 'Edit', edit_district_path(district) %></td>
         <td><%= link_to 'Destroy', district, method: :delete, data: { confirm: 'Are you sure?' } %></td>
