--- a/app/views/districts/show.html.erb
+++ b/app/views/districts/show.html.erb
@@ -1,4 +1,9 @@
 <p id="notice"><%= notice %></p>
 
+Jurisdiction Name: <%= @district.jurisdiction_name %><br>
+Number: <%= @district.number %><br>
+Borough: <%= @district.borough %><br>
+<br>
+
 <%= link_to 'Edit', edit_district_path(@district) %> |
 <%= link_to 'Back', districts_path %>
