--- a/app/views/districts/show.html.erb
+++ b/app/views/districts/show.html.erb
@@ -5,5 +5,10 @@ Number: <%= @district.number %><br>
 Borough: <%= @district.borough %><br>
 <br>
 
-<%= link_to 'Edit', edit_district_path(@district) %> |
+Schools:<br>
+<% @schools.each do |school| %>
+	<%= school.name %><br>
+<% end %>
+
+    
 <%= link_to 'Back', districts_path %>
