Remove new link

--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -16,6 +16,5 @@ Overview: <%= @school.overview %><br>
 <br>
 
 Website: <a href="http://<%= @school.website %>"><%= @school.website %></a><br>
- 
-<%= link_to 'Edit', edit_school_path(@school) %> |
-<%= link_to 'Back', schools_path %>
+
+<%= link_to 'Back', district_schools_path %>
