--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -1,20 +1,11 @@
 <h1>Listing schools in <%= @district.jurisdiction_name %></h1>
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @schools.each do |school| %>
-      <tr>
-        <td><%= school.name%></td>
-        <td><%= link_to 'Show', district_school_path(@district.id,school.id) %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
+  <div class="row">
+  <% @schools.each do |school| %>
+    <div class="col-xs-6 col-lg-4">
+      <h3><%= school.name%></h3>
+      <p><%= school.street_address%> </p>
+      <p><a class="btn btn-default" href="#" role="button"><%= link_to 'Show', district_school_path(@district.id,school.id)%> &raquo;</a></p>
+    </div>
+  <% end %>
+  </div>
 <br>
