--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -2,6 +2,9 @@
 	<div class="jumbotron">
     <h1>Welcome!</h1>
     <p class="lead">Select an option:</p>
-    <p><a class="btn btn-lg btn-success" href="#" role="button">Report a Visit</a>  <a class="btn btn-lg btn-success" href="#" role="button">View Your Schools</a></p>
+    <p>
+    	<a class="btn btn-lg btn-success" href="#" role="button">Report a Visit</a>  
+    	<a class="btn btn-lg btn-success" href="#" role="button">View Your Schools</a>
+    </p>
   </div>
 </div>
