Update view of all reports to show names of schools reported

--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -12,8 +12,8 @@
   <tbody>
     <% @reports.each do |report| %>
       <tr>
-        <td><%= report.new %></td>
-        <td><%= report.create %></td>
+        <td><%= report.school %></td>
+        <td><%= report.dbn %></td>
         <td><%= link_to 'Show', report %></td>
         <td><%= link_to 'Edit', edit_report_path(report) %></td>
         <td><%= link_to 'Destroy', report, method: :delete, data: { confirm: 'Are you sure?' } %></td>
