--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -1,5 +1,8 @@
+<div class="container">
 <h1>New report</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', reports_path %>
+<%= link_to 'Back', home_path %>
+
+</div>
