--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,13 +40,17 @@
         </form>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Options<span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">    
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+          <ul class="dropdown-menu" role="menu">
+            <% if user_signed_in? %>
+              <li><%= link_to("Report a Visit", new_user_report_path(current_user)) %> </li>
+              <li><%= link_to("View Reports", user_reports_path(current_user)) %></li>
+              <li><%= link_to("View Schools",districts_path) %></li>
+            <% end %>
+
+              
             <li class="divider"></li>
             <% if user_signed_in? %>
-              <li class="active"><a>Signed in as <%= current_user.email %></a></li> 
+              <li><a>Signed in as <%= current_user.email %></a></li> 
               <li><%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
             <% else %>
               <li><%= link_to "Sign in", new_user_session_path %></li>
