--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -14,9 +14,9 @@
       <tr>
         <td><%= report.school %></td>
         <td><%= report.dbn %></td>
-        <td><%= link_to 'Show', report %></td>
-        <td><%= link_to 'Edit', edit_report_path(report) %></td>
-        <td><%= link_to 'Destroy', report, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', user_report_path(current_user, report) %></td>
+        <td><%= link_to 'Edit', edit_user_report_path(current_user, report) %></td>
+        <td><%= link_to 'Destroy', user_report_path(current_user, report), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +24,4 @@
 
 <br>
 
-<%= link_to 'New Report', new_report_path %>
+<%= link_to 'New Report', new_user_report_path %>
