--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -34,5 +34,5 @@
   <strong>Additional Information:</strong>
   <%= @report.additional_info %>
 </p>
-<%= link_to 'Edit', edit_report_path(@report) %> |
-<%= link_to 'Back', reports_path %>
+<%= link_to 'Edit', edit_user_report_path(current_user,@report) %> |
+<%= link_to 'Back', user_reports_path(current_user) %>
