--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,12 +32,14 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right"> 
         <li class="divider"></li> 
-        <form class="navbar-form navbar-left" role="search">
+        <!-- <form class="navbar-form navbar-left" role="search"> -->
+        <%= form_tag(schools_search_path, method: "get", class: "navbar-form navbar-left" ) do %>
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
+            <%= text_field_tag("search_text", nil, placeholder: "Search", class: "form-control") %>
           </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-        </form>
+        <%= submit_tag("Search", class: "btn btn-default") %> <!-- type="submit" class="btn btn-default">Submit -->
+        <% end %>
+        <!-- </form> -->
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Options<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
