--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
             <li class="divider"></li>
             <% if user_signed_in? %>
               <li><a>Signed in as <%= current_user.email %></a></li> 
-              <li><%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
+              <li><%= link_to "Sign out", destroy_user_session_path, :method => :get %></li>
             <% else %>
               <li><%= link_to "Sign in", new_user_session_path %></li>
             <% end %>
