Remove some title text

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">UFT School Visit Reports</a>
+      <a class="navbar-brand" href="/">School Visit Reports</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
